--- a/package.json
+++ b/package.json
@@ -9,7 +9,8 @@
   },
   "dependencies": {
     "core-js": "^3.6.5",
-    "vue": "^2.6.11"
+    "vue": "^2.6.11",
+    "vue-sidebar-menu": "^4.6.2"
   },
   "devDependencies": {
     "@vue/cli-plugin-babel": "~4.4.0",
