--- a/requirements.txt
+++ b/requirements.txt
@@ -1,2 +1,19 @@
-Django>=3.1.1
-djangorestframework>=3.12.1
+asgiref==3.2.10
+certifi==2020.6.20
+chardet==3.0.4
+Django==3.1.1
+django-filter==2.4.0
+djangorestframework==3.12.1
+docopt==0.6.2
+idna==2.10
+importlib-metadata==2.0.0
+lxml==4.5.2
+Markdown==3.2.2
+pipreqs==0.4.10
+pyDataverse==0.2.1
+pytz==2020.1
+requests==2.24.0
+sqlparse==0.3.1
+urllib3==1.25.10
+yarg==0.1.9
+zipp==3.2.0
