Docker file for Vue to serve static files

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -16,3 +16,12 @@ services:
       - "8000:8000"
     depends_on:
       - db
+  client:
+    build: "./client"
+    command: npm run serve
+    volumes:
+      - .:/code/client
+    ports:
+      - "8080:8080"
+    depends_on:
+      - opendp_server
