--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,12 +1,15 @@
 version: "3.8"
 
 services:
+  redis:
+    image: redis
   db:
    image: postgres
    environment:
      - POSTGRES_DB=postgres
      - POSTGRES_USER=postgres
      - POSTGRES_PASSWORD=postgres
+  # TODO: Load data every time
   opendp_server:
     build: ""
     command: python server/manage.py runserver 0.0.0.0:8000
