--- a/server/Dockerfile
+++ b/server/Dockerfile
@@ -4,7 +4,7 @@ ENV PYTHONUNBUFFERED=1
 RUN mkdir /code
 WORKDIR /code
 
-COPY server /code/
+COPY . /code/
 COPY requirements/base.txt /code/requirements.txt
 RUN pip install -r requirements.txt
 
