Considering including migrations in Dockerfile

--- a/server/Dockerfile
+++ b/server/Dockerfile
@@ -8,4 +8,5 @@ COPY . /code/
 COPY requirements/base.txt /code/requirements.txt
 RUN pip install -r requirements.txt
 
-
+COPY migrate.sh /code/server/
+RUN chmod 777 /code/server/migrate.sh
