--- a/server/Dockerfile
+++ b/server/Dockerfile
@@ -4,9 +4,7 @@ ENV PYTHONUNBUFFERED=1
 RUN mkdir /code
 WORKDIR /code
 
-COPY . /code/
-COPY requirements/base.txt /code/requirements.txt
-RUN pip install -r requirements.txt
+COPY . /code/server
+WORKDIR /code/server
 
-COPY migrate.sh /code/server/
-RUN chmod 777 /code/server/migrate.sh
+RUN pip install -r requirements/base.txt
