adding Vue Login page

--- a/.env
+++ b/.env
@@ -2,4 +2,4 @@ export REDIS_HOST=redis
 export REDIS_PORT=6379
 export REDIS_PASSWORD=password
 
-export SENDGRID_API_KEY=
+export SENDGRID_API_KEY=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
