--- a/client/package.json
+++ b/client/package.json
@@ -7,6 +7,8 @@
     "build": "vue-cli-service build"
   },
   "dependencies": {
+    "axios": "^0.21.0",
+    "vuex": "^3.6.0",
     "vue": "^2.6.11",
     "vue-router": "^3.1.6"
   },
