remove dependency from local node_modules directory

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -18,6 +18,7 @@ services:
     command: npm run serve
     volumes:
       - .:/code
+      - /code/client/node_modules
     ports:
       - "8080:8080"
     depends_on:
