--- a/client/package.json
+++ b/client/package.json
@@ -10,7 +10,8 @@
     "axios": "^0.21.0",
     "vuex": "^3.6.0",
     "vue": "^2.6.11",
-    "vue-router": "^3.1.6"
+    "vue-router": "^3.1.6",
+    "vue-google-signin-button": "^1.0.2"
   },
   "devDependencies": {
     "@vue/cli-plugin-router": "~4.3.0",
