--- a/client/package.json
+++ b/client/package.json
@@ -8,14 +8,19 @@
   },
   "dependencies": {
     "axios": "^0.21.0",
-    "vuex": "^3.6.0",
     "vue": "^2.6.11",
+    "vue-google-signin-button": "^1.0.2",
     "vue-router": "^3.1.6",
-    "vue-google-signin-button": "^1.0.2"
+    "vuetify": "^2.2.11",
+    "vuex": "^3.6.0"
   },
   "devDependencies": {
     "@vue/cli-plugin-router": "~4.3.0",
     "@vue/cli-service": "~4.5.6",
-    "vue-template-compiler": "^2.6.11"
+    "sass": "^1.19.0",
+    "sass-loader": "^8.0.0",
+    "vue-cli-plugin-vuetify": "^2.0.9",
+    "vue-template-compiler": "^2.6.11",
+    "vuetify-loader": "^1.3.0"
   }
 }
