--- a/.gitignore
+++ b/.gitignore
@@ -22,7 +22,7 @@ __pycache__/
 .Python
 build/
 develop-eggs/
-dist/
+server/dist/
 downloads/
 eggs/
 .eggs/
@@ -151,4 +151,4 @@ cython_debug/
 .vscode
 .DS_Store
 server/.idea/
-server/test_setup/user_uploaded_data/mock-files/2020/11/09/eye-typing.xml
+server/test_setup
