--- a/.env
+++ b/.env
@@ -4,3 +4,5 @@ export REDIS_PASSWORD=password
 
 export SENDGRID_API_KEY=
 export DEFAULT_FROM_EMAIL=
+
+export DJANGO_SETTINGS_MODULE=opendp_project.settings
