--- a/client/package.json
+++ b/client/package.json
@@ -4,7 +4,8 @@
   "private": true,
   "scripts": {
     "serve": "vue-cli-service serve",
-    "build": "vue-cli-service build"
+    "build": "vue-cli-service build",
+    "test:unit": "vue-cli-service test:unit"
   },
   "dependencies": {
     "axios": "^0.21.1",
@@ -17,6 +18,8 @@
   "devDependencies": {
     "@vue/cli-plugin-router": "~4.3.0",
     "@vue/cli-service": "~4.5.6",
+    "@vue/cli-plugin-unit-jest": "^3.11.0",
+    "@vue/test-utils": "1.1.3",
     "sass": "^1.19.0",
     "sass-loader": "^8.0.0",
     "vue-cli-plugin-vuetify": "^2.0.9",
