--- a/client/package.json
+++ b/client/package.json
@@ -17,9 +17,10 @@
   },
   "devDependencies": {
     "@vue/cli-plugin-router": "~4.3.0",
-    "@vue/cli-service": "~4.5.6",
     "@vue/cli-plugin-unit-jest": "^3.11.0",
+    "@vue/cli-service": "~4.5.6",
     "@vue/test-utils": "1.1.3",
+    "cypress": "^7.0.1",
     "sass": "^1.19.0",
     "sass-loader": "^8.0.0",
     "vue-cli-plugin-vuetify": "^2.0.9",
