--- a/client/package.json
+++ b/client/package.json
@@ -11,6 +11,7 @@
     "axios": "^0.21.1",
     "vue": "^2.6.11",
     "vue-google-signin-button": "^1.0.2",
+    "vue-waypoint": "^3.5.2",
     "vue-router": "^3.1.6",
     "vuetify": "^2.2.11",
     "vuex": "^3.6.0"
