fix cypress directory

--- a/.github/workflows/cypress.yml
+++ b/.github/workflows/cypress.yml
@@ -13,6 +13,6 @@ jobs:
       - name: Cypress run
         uses: cypress-io/github-action@v2
         with:
-          path: ./client
+          working-directory: ./client
           build: npm run build
           start: npm start
