--- a/client/package.json
+++ b/client/package.json
@@ -18,8 +18,8 @@
   },
   "devDependencies": {
     "@vue/cli-plugin-router": "~4.3.0",
-    "@vue/cli-plugin-unit-jest": "^3.11.0",
-    "@vue/cli-service": "~4.5.6",
+    "@vue/cli-plugin-unit-jest": "^3.12.1",
+    "@vue/cli-service": "^4.5.12",
     "@vue/test-utils": "1.1.3",
     "cypress": "^7.0.1",
     "sass": "^1.19.0",
