--- a/.github/workflows/cypress.yml
+++ b/.github/workflows/cypress.yml
@@ -8,6 +8,17 @@ jobs:
     steps:
       - name: Checkout
         uses: actions/checkout@v2
+      - name: Set up Python 3.8
+        uses: actions/setup-python@v2
+        with:
+          python-version: 3.8
+      - name: Install python dependencies
+        run: |
+          python -m pip install --upgrade pip
+          pip install flake8 pytest
+          cd server
+          pip install -r requirements/dev.txt
+          cd ../
       # Install NPM dependencies, cache them correctly
       # and run all Cypress tests
       - name: Cypress run
@@ -16,3 +27,5 @@ jobs:
           working-directory: ./client
           build: npm run build
           start: npm start
+      - name: Django server run
+        run: python manage.py runserver 0.0.0.0:8000
