--- a/.github/workflows/cypress.yml
+++ b/.github/workflows/cypress.yml
@@ -22,7 +22,7 @@ jobs:
       - name: Django server run
         run: |
           cd server
-          python manage.py runserver 0.0.0.0:8000
+          python manage.py runserver 0.0.0.0:8000 &
           # Install NPM dependencies, cache them correctly
         # and run all Cypress tests
       - name: Cypress run
