--- a/.github/workflows/cypress.yml
+++ b/.github/workflows/cypress.yml
@@ -31,3 +31,4 @@ jobs:
           working-directory: ./client
           build: npm run build
           start: npm start
+          wait-on: 'http://0.0.0.0:8080'
