--- a/.github/workflows/cypress.yml
+++ b/.github/workflows/cypress.yml
@@ -29,6 +29,6 @@ jobs:
         uses: cypress-io/github-action@v2
         with:
           working-directory: ./client
-          build: npm run build
-          start: npm start
+          build: ../docker-compose up --build
+          start: ../docker-compose up
           wait-on: 'http://0.0.0.0:8000'
