--- a/.github/workflows/cypress.yml
+++ b/.github/workflows/cypress.yml
@@ -6,29 +6,9 @@ jobs:
   cypress-run:
     runs-on: ubuntu-latest
     steps:
-      - name: Checkout
-        uses: actions/checkout@v2
-      - name: Set up Python 3.8
-        uses: actions/setup-python@v2
-        with:
-          python-version: 3.8
-      - name: Install python dependencies
-        run: |
-          python -m pip install --upgrade pip
-          pip install flake8 pytest
-          cd server
-          pip install -r requirements/dev.txt
-          cd ../
-      - name: Django server run
-        run: |
-          cd server
-          python manage.py runserver 0.0.0.0:8000 &
-          # Install NPM dependencies, cache them correctly
-        # and run all Cypress tests
       - name: Cypress run
         uses: cypress-io/github-action@v2
         with:
           working-directory: ./client
-          build: ../docker-compose up --build
-          start: ../docker-compose up
+          run: docker-compose up --build
           wait-on: 'http://0.0.0.0:8000'
