--- a/.github/workflows/cypress.yml
+++ b/.github/workflows/cypress.yml
@@ -9,9 +9,8 @@ jobs:
       - uses: actions/checkout@v2
       - name: Build the stack
         run: docker-compose up -d
-      - name: Sleep for 30 seconds
-        uses: jakejarvis/wait-action@master
-        with:
-          time: '30s'
       - name: Cypress run
         uses: cypress-io/github-action@v2
+        with:
+          working-directory: ./client
+
