--- a/.github/workflows/cypress.yml
+++ b/.github/workflows/cypress.yml
@@ -13,4 +13,5 @@ jobs:
         uses: cypress-io/github-action@v2
         with:
           working-directory: ./client
-
+          build: npm run build
+          start: npm start
