--- a/.github/workflows/cypress.yml
+++ b/.github/workflows/cypress.yml
@@ -7,11 +7,12 @@ jobs:
     runs-on: ubuntu-latest
     steps:
       - uses: actions/checkout@v2
-      - name: Build the stack
-        run: docker-compose up -d
+      #  - name: Build the stack
+      #   run: docker-compose up -d
       - name: Install dependencies
         run: |
           cd client
+          mkdir node_modules
           npm install
       - name: run Cypress tests
         run: |
