--- a/.github/workflows/cypress.yml
+++ b/.github/workflows/cypress.yml
@@ -7,8 +7,8 @@ jobs:
     runs-on: ubuntu-latest
     steps:
       - uses: actions/checkout@v2
-      #  - name: Build the stack
-      #   run: docker-compose up -d
+      - name: Build the stack
+        run: docker-compose up -d
       - name: Install dependencies
         run: |
           cd client
