--- a/.github/workflows/cypress.yml
+++ b/.github/workflows/cypress.yml
@@ -9,11 +9,5 @@ jobs:
       - uses: actions/checkout@v2
       - name: Build the stack
         run: docker-compose up -d
-      - name: Install dependencies
-        run: |
-          cd client
-          npm install
-      - name: run Cypress tests
-        run: |
-          cd client
-          node_modules/.bin/cypress run
+      - name: curl test
+        run: curl localhost:8000
