--- a/client/package.json
+++ b/client/package.json
@@ -5,12 +5,14 @@
   "scripts": {
     "serve": "vue-cli-service serve",
     "build": "vue-cli-service build",
-    "test:unit": "vue-cli-service test:unit"
+    "test:unit": "vue-cli-service test:unit",
+    "i18n:report": "vue-cli-service i18n:report --src \"./src/**/*.?(js|vue)\" --locales \"./src/locales/**/*.json\""
   },
   "dependencies": {
     "axios": "^0.21.1",
     "vue": "^2.6.12",
     "vue-google-signin-button": "^1.0.4",
+    "vue-i18n": "^8.22.3",
     "vue-router": "^3.5.1",
     "vue-waypoint": "^3.5.2",
     "vuetify": "^2.4.11",
@@ -24,6 +26,7 @@
     "cypress": "^7.1.0",
     "sass": "^1.32.11",
     "sass-loader": "^10.0.0",
+    "vue-cli-plugin-i18n": "~2.1.0",
     "vue-cli-plugin-vuetify": "^2.3.1",
     "vue-template-compiler": "^2.6.12",
     "vuetify-loader": "^1.7.2"
