make locales dir in docker container

--- a/client/Dockerfile
+++ b/client/Dockerfile
@@ -9,7 +9,10 @@ RUN npm install
 # If you are building your code for production
 # RUN npm ci --only=production
 
+
 # Convert Locale CSV to JSON and copy it to locale src dir
+# make directory if it doesn't already exist
+RUN mkdir -p /code/client/src/locales
 RUN node /code/client/build_locale/CreateLocaleJson.js
 
 # Bundle app source
