copy package files & build_locale only

--- a/client/Dockerfile
+++ b/client/Dockerfile
@@ -2,7 +2,8 @@ FROM node:15
 
 # Create app directory
 WORKDIR /code/client
-COPY . /code/client/
+COPY package*.json /code/client
+COPY build_locale/*.* /code/client/build_locale/
 
 
 RUN npm install
