--- a/client/Dockerfile
+++ b/client/Dockerfile
@@ -3,7 +3,7 @@ FROM node:15
 # Create app directory
 WORKDIR /code/client
 COPY package*.json /code/client/
-#COPY build_locale/*.* /code/client/build_locale/
+COPY build_locale/*.* /code/client/build_locale/
 
 
 RUN npm install
