Combining steps into entrypoint script

--- a/client/Dockerfile
+++ b/client/Dockerfile
@@ -4,7 +4,7 @@ FROM node:15
 WORKDIR /code/client
 COPY package*.json /code/client/
 COPY build_locale/*.* /code/client/build_locale/
-
+# COPY src/locales/* /code/client/src/locales/
 
 RUN npm install
 # If you are building your code for production
@@ -13,11 +13,12 @@ RUN npm install
 
 # Convert Locale CSV to JSON and copy it to locale src dir
 # make directory if it doesn't already exist
-#RUN mkdir -p /code/client/src/locales
-#RUN node /code/client/build_locale/CreateLocaleJson.js
+# RUN mkdir -p /code/client/src/locales
+# RUN node /code/client/build_locale/CreateLocaleJson.js
+# COPY src/locales/* /code/client/src/locales/
 
 # Bundle app source
-#COPY . .
+# COPY . .
 
 EXPOSE 8080
-CMD [ "npm", "run", "serve", "--quiet" ]
+ENTRYPOINT [ "./run_client.sh" ]
