add conditional logic to run_client.sh

--- a/docker-compose-ci-step1.yml
+++ b/docker-compose-ci-step1.yml
@@ -5,7 +5,9 @@ services:
 
   client:
     build: "./client"
-    command: npm run build
+    command: ./run_client.sh
+    environment:
+      - DEV_MODE=false
     volumes:
       - .:/code
       - /code/client/node_modules
