some more debug params

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -33,7 +33,9 @@ services:
     # these variables to point to a standalone instance
     env_file:
       - .env
-    command: python manage.py runserver 0.0.0.0:8000
+    environment:
+      - STATIC_ROOT=/code/server
+    command: sh -c "python manage.py show_debug_params && python manage.py runserver 0.0.0.0:8000"
     volumes:
       - .:/code
     ports:
