--- a/deploy/k8s_maker/rendered/dpcreator_05_2021_0611.yaml
+++ b/deploy/k8s_maker/rendered/dpcreator_05_2021_0611.yaml
@@ -22,7 +22,7 @@ data:
 apiVersion: apps/v1
 kind: Deployment
 metadata:
-  name: postgres
+  name: dpcreator-database
 spec:
   replicas: 1
   selector:
