--- a/deploy/k8s_maker/templates/azure_k8s_04_database.yaml
+++ b/deploy/k8s_maker/templates/azure_k8s_04_database.yaml
@@ -22,7 +22,7 @@ data:
 apiVersion: apps/v1
 kind: Deployment
 metadata:
-  name: postgres
+  name: dpcreator-database
 spec:
   replicas: 1
   selector:
