Azure setup instructions and k8s files (#210)
* updates for #75

* updated test settings #75

* remove custom cooke name

* for mock vue, default to public dv dataset

* #75 restore test data for cypress

* #75; info to serve static files via nginx

Note: instructions and k8s file in repo dpcreator-deploy; will move into this repo to close ticket

* Update settings.py

* Merge remote-tracking branch 'origin' into 75-deploy

* include locales file

* k8s templates #75 (moved from dpcreator-deploy)

* updating instructions #75

* integration tests? #75

* Update docker-compose-ci-step1.yml

* ci ? #75

* ci tweak? #75

* switch static_root

* Update docker-compose-ci-step2.yml

* debug

* some more debug params

* shouldn't work, but....

* ci try

* integration test

* static related update

* updated k8s

* updates for #75

* updated deploy

* updated deploy

* Update README.md

* added instructions, removed several older files #210

--- a/server/Dockerfile
+++ b/server/Dockerfile
@@ -1,10 +1,28 @@
 FROM python:3.9
+
+LABEL org.opencontainers.image.source https://github.com/opendp/opendp-ux
+
 ENV PYTHONUNBUFFERED=1
 
-RUN mkdir /code
-WORKDIR /code
+# -------------------------------------
+# Copy over the requirements and run them
+# -------------------------------------
+RUN mkdir -p /code/server
+WORKDIR /code/server
+COPY ./requirements/ ./requirements
+RUN pip install --no-cache-dir -r requirements/dev.txt
+#RUN pip3 install --no-cache-dir -r requirements/prod.txt
 
+# -------------------------------------
+# Copy over the rest of the repository
+# -------------------------------------
+WORKDIR /code
 COPY . /code/server
 WORKDIR /code/server
 
-RUN pip install -r requirements/dev.txt
+# -------------------------------------
+# Copy startup script
+# (Used for deployment)
+# -------------------------------------
+COPY scripts_startup/azure_start_01.sh /usr/bin/azure_start_01.sh
+RUN chmod u+x /usr/bin/azure_start_01.sh
