--- a/docker-compose-ci-step1.yml
+++ b/docker-compose-ci-step1.yml
@@ -1,13 +1,12 @@
 version: "3.8"
 
 services:
-
-
   client:
     build: "./client"
     command: ./run_client.sh
     environment:
       - DEV_MODE=false
+      #- NODE_ENV=production
     volumes:
       - .:/code
       - /code/client/node_modules
