--- a/docker-compose-ci-step2.yml
+++ b/docker-compose-ci-step2.yml
@@ -22,7 +22,7 @@ services:
     # these variables to point to a standalone instance
     env_file:
       - .env
-    command: sh -c "./migrate.sh && python manage.py runserver 0.0.0.0:8000"
+    command: sh -c "./migrate.sh && python manage.py show_debug_params && python manage.py runserver 0.0.0.0:8000"
     volumes:
       - .:/code
       - ./server/static:/server/static
@@ -33,10 +33,12 @@ services:
 
   cypress:
     image: "cypress/included:7.2.0"
+    command: "--config-file cypress_github_ci.json"
     depends_on:
       - server
-    environment:
-      - CYPRESS_baseUrl=http://server:8000
+    #environment:
+    #  - CYPRESS_BASE_URL=http://server:8000
+    #  ^ moved to custom config file: cypress_github_ci.json
     working_dir: /e2e
     volumes:
       - ./client:/e2e
