--- a/docker-compose-ci-step2.yml
+++ b/docker-compose-ci-step2.yml
@@ -32,7 +32,8 @@ services:
     env_file:
       - .env
     environment:
-      - DJANGO_SETTINGS_MODULE=opendp_project.settings.development
+      - DJANGO_SETTINGS_MODULE=opendp_project.settings.cypress_settings
+      #- DJANGO_SETTINGS_MODULE=opendp_project.settings.development
     command: sh -c "./migrate.sh && python manage.py show_debug_params && python manage.py runserver 0.0.0.0:8000"
     volumes:
       - .:/code
