--- a/docker-compose-ci-step2.yml
+++ b/docker-compose-ci-step2.yml
@@ -1,11 +1,17 @@
 version: "3.8"
 
 services:
+  # ---------------------------------
+  # Redis: used for async celery tasks
+  # ---------------------------------
   redis:
     image: redis
     command: redis-server --requirepass password
     expose:
       - 6379
+  # ---------------------------------
+  # Postgres Database
+  # ---------------------------------
   db:
     image: postgres
     environment:
@@ -14,7 +20,10 @@ services:
       - POSTGRES_PASSWORD=postgres
     ports:
       - "5432:5432"
-  # TODO: Load data every time
+  # ---------------------------------
+  # Server side (Django)
+  #  - Built from "server/Dockerfile"
+  # ---------------------------------
   server:
     container_name: webapp-frontend
     build: "./server"
@@ -22,6 +31,9 @@ services:
     # these variables to point to a standalone instance
     env_file:
       - .env
+    environment:
+      - DJANGO_SETTINGS_MODULE=opendp_project.settings.cypress_settings
+      #- DJANGO_SETTINGS_MODULE=opendp_project.settings.development
     command: sh -c "./migrate.sh && python manage.py show_debug_params && python manage.py runserver 0.0.0.0:8000"
     volumes:
       - .:/code
@@ -36,9 +48,9 @@ services:
     command: "--config-file cypress_github_ci.json"
     depends_on:
       - server
+    # Note: the environment vars have been moved to a custom config file: cypress_github_ci.json
     #environment:
     #  - CYPRESS_BASE_URL=http://server:8000
-    #  ^ moved to custom config file: cypress_github_ci.json
     working_dir: /e2e
     volumes:
       - ./client:/e2e
