--- a/client/package.json
+++ b/client/package.json
@@ -24,6 +24,7 @@
     "@vue/cli-service": "^4.5.12",
     "@vue/test-utils": "1.1.4",
     "cypress": "^7.1.0",
+    "cypress-terminal-report": "^3.2.2",
     "papaparse": "^5.3.0",
     "sass": "^1.32.11",
     "sass-loader": "^10.0.0",
