--- a/client/package.json
+++ b/client/package.json
@@ -10,6 +10,8 @@
   },
   "dependencies": {
     "axios": "^0.21.1",
+    "camelcase-keys": "^7.0.0",
+    "snakecase-keys": "^4.0.2",
     "vue": "^2.6.12",
     "vue-google-signin-button": "^1.0.4",
     "vue-i18n": "^8.22.3",
