109 terms of access client (#242)
* add router for terms-of-access-agreement

* add dynamic data to Terms and Conditions page (need to fix formatting)

* remove TOU text - that is stored in the database

* restored formatting

* remove  dataset_info  from  serializer

* Update DPCreatorText.csv

remove line break

* Update DPCreatorText.csv

add quotes to  text column

* Update DPCreatorText.csv

remove line breaks

* Update DPCreatorText.csv

change quote characters

* Update DPCreatorText.csv

remove line breaks and add quotes

* reformat for github viewer

* remove reference to dataset_info from string method

* added a relationship between TermsOfAccessLogSerializer and TermsOfAccessSerializer

* simplify logic for displaying uploaded file

* implement accept terms of use workflow

* Fixing serializers for terms of access

* add router for terms-of-access-agreement

* add dynamic data to Terms and Conditions page (need to fix formatting)

* remove TOU text - that is stored in the database

* restored formatting

* remove  dataset_info  from  serializer

* Update DPCreatorText.csv

remove line break

* Update DPCreatorText.csv

add quotes to  text column

* Update DPCreatorText.csv

remove line breaks

* Update DPCreatorText.csv

change quote characters

* Update DPCreatorText.csv

remove line breaks and add quotes

* reformat for github viewer

* remove reference to dataset_info from string method

* added a relationship between TermsOfAccessLogSerializer and TermsOfAccessSerializer

* simplify logic for displaying uploaded file

* implement accept terms of use workflow

* Fixing serializers for terms of access

* first commit for terms-and-conditions-spec.js

* debugging POST to TermsOfAccessLog

* temporarily change clear_test_data.py so that tests will work

* fix cypress tests

* add migration for terms_of_access

* increase timeouts for github action

* remove du

--- a/.github/workflows/cypress.yml
+++ b/.github/workflows/cypress.yml
@@ -10,3 +10,9 @@ jobs:
         run: docker-compose -f docker-compose-ci-step1.yml up
       - name: Build server and test
         run: docker-compose -f  docker-compose-ci-step2.yml up --exit-code-from cypress
+      - name: Archive Cypress test results
+        uses: actions/upload-artifact@v2
+        with:
+          name: cypress-videos
+          path: client/cypress/videos
+          retention-days: 3
