--- a/client/package.json
+++ b/client/package.json
@@ -11,6 +11,7 @@
   "dependencies": {
     "axios": "^0.21.1",
     "camelcase-keys": "^7.0.0",
+    "decimal.js": "^10.3.1",
     "snakecase-keys": "^4.0.2",
     "vue": "^2.6.12",
     "vue-google-signin-button": "^1.0.4",
