add script to wait for server in ci-step2

--- a/docker-compose-ci-step2.yml
+++ b/docker-compose-ci-step2.yml
@@ -53,7 +53,7 @@ services:
       - DJANGO_SETTINGS_MODULE=opendp_project.settings.development
     env_file:
       - .env
-    command: celery -A opendp_project worker -l info -n worker_dpcreator
+    command: ./wait-for-it.sh && celery -A opendp_project worker -l info -n worker_dpcreator
     #  command: celery -A opendp_project worker -l INFO
     volumes:
       - .:/code
